# sized

./: .travis.yml  LICENSE  fixed-bytestring.cabal  sized.cabal
benchmarks/: BenchmarksAgainstByteString.hs
src/Data/ByteString/: Fixed.hs
src/Data/ByteString/Fixed/: Foreign.hs  Instances.hs  Internal.hs
src/Data/ByteString/Fixed/Internal/: Foreign.hs
src/Data/Sized/: ByteString.hs  Foreign.hs  Nat.hs
tests/: Test.hs  Tests.hs
tests/Data/ByteString/Fixed/Instances/: Tests.hs
tests/Data/Sized/ByteString/: Tests.hs
