Name:               fixed-bytestring
Version:            0.0.0
Synopsis:           Bytestrings with fixed size
Description:        Bytestrings with fixed size
License:            MIT
License-file:       LICENSE
Copyright:          Fedor Gogolev <knsd@knsd.net>
Author:             Fedor Gogolev <knsd@knsd.net>
Maintainer:         Fedor Gogolev <knsd@knsd.net>
Homepage:           https://github.com/lambda-llama/fixed-bytestring
Bug-reports:        https://github.com/lambda-llama/fixed-bytestring/issues
Category:           Data
Stability:          Alpha
Build-type:         Simple
Cabal-version:      >= 1.16
Tested-with:        GHC == 7.6.*

Library
    Hs-source-dirs:   src
    Ghc-options:      -Wall -fno-warn-orphans
    Default-language: Haskell2010
    Build-depends:
        base                       == 4.6.*  || == 4.5.*
      , bytestring                 == 0.10.* || == 0.9.*
      , deepseq                    == 1.3.*

    Exposed-modules:
        Data.ByteString.Fixed.Internal
        Data.ByteString.Fixed.Internal.Foreign

Source-repository head
    Type:             git
    Location:         https://github.com/lambda-llama/fixed-bytestring
